# stm32u5g9j-dk2-qt-benchmark

./: .gitignore  CMakeLists.txt  MainScreen.qml  MotorCluster.qml  README.md  ResultScreen.qml  SVGDemo.qml  StaticImage.qml  StatusProvider.h  Test2D.qml  TextScroll.qml  VideoTest.qml  main.cpp  readme.md  stm32u5g9j_dk2_qt_benchmark.qml  stm32u5g9j_dk2_qt_benchmark.qmlproject
Patch/: 0001-PATCH-1-Platform-file-patch.patch  0002-PATCH-2-Src-folder-patch.patch  sdk_rebuild.bat
qmlfiles/: MainScreen.qml  MotorCluster.qml  MyButton.qml  ResultScreen.qml  SVGDemo.qml  StaticImage.qml  Test2D.qml  TextScroll.qml  VideoTest.qml
shapes/: CarBody.qml  Ellipse.qml  Tire1.qml  Tire2.qml  Tire3.qml  Tire4.qml  Tire5.qml
